<resources>
    <string name="app_name">LearnFootball</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_365">365</string>
    <string name="football">Football</string>
    <string name="rules2">Increase your player\'s skill points for a better performance in every match.</string>
    <string name="rules1">Manage Your Player Skills</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="select_language">Select language</string>
    <string name="indonesian">Indonesian</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="tv_continue">Continue</string>
    <string name="english">English</string>
    <string name="english_premier_league">English Premier League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="la_liga">La Liga</string>
    <string name="seria_a">Seria A</string>
    <string name="default_league">Default League</string>
    <string name="test">test test test test test</string>
    <string name="_20000">20000</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="price">Price</string>
    <string name="players">Players</string>
    <string name="team_info">Team info</string>
    <string name="leagues">Leagues</string>
    <string name="teams">Teams</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="top_coaches">Top coaches</string>
    <string name="country">Country</string>
    <string name="top_clubs">Top clubs</string>
    <string name="club_name">Club name</string>
    <string name="tv_rules">In the application you can find information about the top leagues, namely the English, German, Spanish and Italian leagues</string>
    <string name="next">Next</string>
    <string name="tv_rules2">And also you can find a list of top coaches and top teams for today.</string>
</resources>