<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".presentation.fragments.SelectLanguageFragment">

    <RadioGroup
        android:id="@+id/leaguesRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_btn"
            android:checked="true"
            android:gravity="center"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioItalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_btn"
            android:gravity="center"
            android:text="@string/italian"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioSpanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_btn"
            android:gravity="center"
            android:text="@string/spanish"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioIndonesian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_btn"
            android:gravity="center"
            android:text="@string/indonesian"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/yellow_btn"
        android:text="@string/tv_continue"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
